src/components/DoctorsPatient/singlePatientCardStyle.scss
@mixin icon($top: 160px, $left: 35px) {
  position: absolute;
  top: $top;
  left: $left;
  color: $my-gray;
}
@mixin icon-hover($hover-color: $dark-green) {
  cursor: pointer;
  color: $hover-color;
}

div.icon-wrapper {
  position: relative;
}
.icon-chat {
  @include icon;
  &:hover {
    @include icon-hover();
  }
}
.icon-wa {
  @include icon(195px);
  &:hover {
    @include icon-hover();
  }
}
.icon-mail {
  @include icon(230px);
  &:hover {
    @include icon-hover();
  }
}

.btn-i-info {
  @include icon(150px, -30px);
  color: $dark-green;
  background-color: none;
  &:hover {
    @include icon-hover($main-blue);
  }
  &:focus {
    border: none;
    padding: 0;
    margin: 0;
    box-shadow: none;
  }
}

.card-container {
  display: inline-block;
  width: 240px;
  text-align: center;
}

.img-container {
  height: 300px;
  //width: 200px;
  overflow: hidden;
  border-radius: 0px 0px 20px 20px;
  display: inline-block;
}

.img-container img {
  height: 200px;
  transform: skew(0deg, -13deg);
  height: 250px;
  margin: -35px 0px 0px -70px;
}

.inner-skew {
  display: inline-block;
  border-radius: 20px;
  overflow: hidden;
  padding: 0px;
  transform: skew(0deg, 13deg);
  font-size: 0px;
  margin: 153px 0px 0px 68px;
  background: $light-sand;
  height: 185px;
  width: 180px;
}

.text-container {
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
  padding: 20px;
  border-radius: 20px;
  background: rgba($light-sand, 0.3);
  margin: -37px -30px;
  line-height: 19px;
  font-size: 14px;
  & h3 {
    margin: 20px 0px 10px 0px;
    color: $dark-green;
    font-size: 1rem;
    font-weight: 600;
    text-transform: uppercase;
  }
}

.btn-card {
  color: $dark-green;
  border-radius: 100px;
  &:hover {
    color: $white !important;
    background-color: $dark-green;
    border-radius: 100px;
  }
}

.info-circle-fill::before {
  content: "\f430";
  font-size: 30px;
}

.my-form-control {
  display: block;
  width: 100%;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: $my-gray;
  background-color: transparent;
  background-clip: padding-box;
  border: 0;
  border-bottom: 2px solid $main-blue;
  border-radius: 0;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

